--- a/style.css
+++ b/style.css
@@ -1,7 +1,20 @@
 * {
+  box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
+/* @media screen and (max-width: 768px) {
+  .firstsection {
+    flex-direction: column;
+    align-items: center;
+    background-size: 100%;
+  }*/
+
+/* @media screen and (max-width: 600px) {
+  .textcard {
+    font-size: 20px;
+    margin-left: 100px;
+  } */
 
 .firstsection {
   display: flex;
@@ -116,10 +129,6 @@ span {
   background-color: grey;
   margin-top: 9px;
 }
-.card {
-  width: 1080px;
-  height: 873px;
-}
 
 .lastcard {
   width: 350px;
@@ -135,4 +144,9 @@ span {
   background-repeat: no-repeat;
   background-size: 50%;
   background-position-x: right;
+}
+.container {
+  display: block;
+  width: 1080px;
+  margin: 0 auto;
 }
