--- a/style.css
+++ b/style.css
@@ -136,3 +136,9 @@ span {
   background-size: 50%;
   background-position-x: right;
 }
+/* body {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+} */
