--- a/styles/main.css
+++ b/styles/main.css
@@ -1,29 +1,68 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-  }
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 
-  body {
-    display: flex;
-  }
-  section {
-    min-height: 100vh;
-    width: 50%;
-  }
+body {
+  display: flex;
+}
+section {
+  min-height: 100vh;
+  width: 50%;
+}
 
+.first-half {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 60px;
+}
+
+.first-half h1 {
+  font-size: 48px;
+  color: #1877f2;
+}
+
+.first-half p {
+  font-size: 20px;
+}
+/* @media only screen and (maxwidth: 600px) {
+  .first-half {
+    padding: 20px;
+  }
+  .first-half h1 {
+    font-size: 27px;
+  }
+  .first-half p {
+    font-size: 32px;
+  }
+} */
+/* .container {
+  /* display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row; */
+/* display: block;
+  margin: 0 auto; */
+body {
+  display: flex;
+}
+@media only screen and (max-width: 600px) {
+  /* .first-half {
+    padding: 20px;
+  }
+  .first-half h1 {
+    font-size: 27px;
+  }
+  .first-half p {
+    font-size: 32px;
+  } */
   .first-half {
     display: flex;
-    flex-direction: column;
+    align-items: center;
     justify-content: center;
-    padding: 60px;
+    flex-direction: column;
   }
-
-  .first-half h1 {
-    font-size: 48px;
-    color: #1877f2;
-  }
-
-  .first-half p {
-    font-size: 20px;
-  }
+}
